WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284473
Non-unified build fixes, partial
https://bugs.webkit.org/show_bug.cgi?id=284473
Summary
Non-unified build fixes, partial
Claudio Saavedra
Reported
2024-12-11 10:15:44 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2024-12-11 10:16:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37785
EWS
Comment 2
2024-12-11 13:21:53 PST
Committed
287693@main
(59d192f155d5): <
https://commits.webkit.org/287693@main
> Reviewed commits have been landed. Closing PR #37785 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug