Non-unified build fixes, partial https://bugs.webkit.org/show_bug.cgi?id=284473

Unreviewed build fix.

* Source/WebCore/Modules/fetch/FetchLoader.cpp:
* Source/WebCore/dom/InternalObserverReduce.h:
* Source/WebCore/html/parser/HTMLDocumentParser.h:
* Source/WebCore/rendering/style/StyleInheritedData.h:
* Source/WebKit/UIProcess/GPU/GPUProcessProxy.cpp:
* Source/WebKit/WebProcess/XR/PlatformXRSystemProxy.cpp:

Canonical link: https://commits.webkit.org/287693@main