Source/WebCore/rendering/style/StyleInheritedData.h
@@ -27,6 +27,7 @@
 #include "FontCascade.h"
 #include "Length.h"
 #include "StyleColor.h"
+#include "StyleFontData.h"
 #include <wtf/DataRef.h>
 
 namespace WTF {
@@ -34,8 +35,6 @@ class TextStream;
 }
 
 namespace WebCore {
-
-class StyleFontData;
 
 DECLARE_ALLOCATOR_WITH_HEAP_IDENTIFIER(StyleInheritedData);
 class StyleInheritedData : public RefCounted<StyleInheritedData> {
