Source/WebKit/WebProcess/XR/PlatformXRSystemProxy.cpp
@@ -35,6 +35,7 @@
 #include "WebPage.h"
 #include "WebProcess.h"
 #include "XRDeviceInfo.h"
+#include <WebCore/Page.h>
 #include <WebCore/SecurityOrigin.h>
 #include <wtf/Vector.h>
 
